--- a/src/pages/Home/components/WhyMadeInKokand/styles.module.css
+++ b/src/pages/Home/components/WhyMadeInKokand/styles.module.css
@@ -51,6 +51,7 @@
   .whyTitle {
     margin-bottom: 84px;
     max-width: 318px;
+    font-size: 32px;
   }
   .whyContent {
     justify-content: center;
