--- a/src/pages/Product/components/Products/styles.module.css
+++ b/src/pages/Product/components/Products/styles.module.css
@@ -29,6 +29,10 @@
     margin-left: 20px;
     gap: 15px;
 }
+.productCard_box {
+    border: 1px solid #EEE;
+    border-radius: 8px;
+}
 @media screen and (max-width: 1150px) {
     .productsContainer {
         justify-content: center;
@@ -54,6 +58,6 @@
         height: 205px;
     }
     .productsContainer {
-        gap: 8px;
+        gap: 12px;
     }
 }
