--- a/src/components/ProductCard/styles.module.css
+++ b/src/components/ProductCard/styles.module.css
@@ -33,7 +33,7 @@
 .newProduct_img{
   width: 100% ;
   height: 200px;
-  object-fit: contain;
+  object-fit: cover;
   /* object-position: center center; */
 }
 
