--- a/src/pages/CompanyInfo/styles.module.css
+++ b/src/pages/CompanyInfo/styles.module.css
@@ -31,7 +31,35 @@
 .notActive:hover {
     background-color: #e5e8eb;
 }
-.infoText {
+.infoBlock {
     max-width: 1000px;
     margin-bottom: 100px;
+} 
+.infoText {
+    max-width: 750px;
+    margin-bottom: 20px;
+}
+.keyInfo {
+    width: 100%;
+    padding: 20px;
+    /* box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12); */
+    border: 1px solid #DDD;
+    border-radius: 4px;
+}
+.keyInfoTitle {
+    margin-bottom: 20px;
+    color: gray;
+}
+.details {
+    display: flex;
+    justify-content: space-between;
+    /* padding: 20px 0; */
+}
+.businessType {
+    display: flex;
+    gap: 10px;
+}
+.infoItem {
+    margin-bottom: 7px;
+    font-weight: 700;
 }
