--- a/src/components/RequestForm/styles.module.css
+++ b/src/components/RequestForm/styles.module.css
@@ -7,50 +7,50 @@
 }
 
 .contactForm_name_input {
-  width: 400px;
-  padding: 20px;
+  width: 100%;
+  padding: 15px;
   border-radius: 5px;
   border: 1px solid #E1E1E1;
   color: #000;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 20px;
-  margin-bottom: 24px;
+  margin-bottom: 15px;
   /* opacity: 0.2; */
 }
 
 .contactForm_textarea {
   border-radius: 5px;
   border: 1px solid #E1E1E1;
-  font-family: SF Pro Display;
-  width: 400px;
-  padding: 19px 20px 20px 13px;
+  width: 100%;
+  padding: 15px;
   color: #000;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 20px;
   max-height: 206px;
-  margin-bottom: 24px;
+  margin-bottom: 15px;
 }
 
 .contactForm_p {
   color: #000;
   font-size: 12px;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   margin-left: 13px;
 }
 
 .contactForm_btn {
   border-radius: 6px;
   background: #1876F2;
-  padding: 20px 42px;
+  padding: 15px 30px;
   color: #FFF;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 20px;
   display: block;
   cursor: pointer;
+  margin-bottom: 15px;
 }
 
 .contactForm_btn:disabled {
