--- a/src/pages/Companies/CompanyBlock/styles.module.css
+++ b/src/pages/Companies/CompanyBlock/styles.module.css
@@ -3,6 +3,7 @@
     border-radius: 4px;
     margin-bottom: 24px;
     padding: 20px;
+    width: 900px;
 }
 .companyHead {
     display: flex;
@@ -19,7 +20,7 @@
 }
 .productCarousel {
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
 }
 .productsFor {
     margin-bottom: 10px;
@@ -34,7 +35,34 @@
 }
 .itemImage {
     margin-bottom: 10px;
+    width: 184px;
+    height: 100px;
 }
 .itemName {
     font-size: 15px;
+}
+@media screen and (max-width: 900px) {
+    .companyCard {
+        width: 650px;
+    }
+}
+@media screen and (max-width: 700px) {
+    .companyCard {
+        width: 500px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .companyCard {
+        width: 400px;
+    }
+}
+@media screen and (max-width: 440px) {
+    .companyCard {
+        width: 320px;
+    }
+}
+@media screen and (max-width: 370px) {
+    .companyCard {
+        width: 300px;
+    }
 }
