--- a/src/pages/Companies/styles.module.css
+++ b/src/pages/Companies/styles.module.css
@@ -4,3 +4,26 @@
     display: flex;
     gap: 20px;
 }
+@media screen and (max-width: 1150px) {
+    .companiesContainer {
+        flex-direction: column;
+    }
+    .filterbox {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+    }
+    .companyBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 700px) {
+    .filterbox {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
