--- a/src/pages/CompanyInfo/components/Products/styles.module.css
+++ b/src/pages/CompanyInfo/components/Products/styles.module.css
@@ -6,22 +6,26 @@
 
 .productsList {
   display: grid;
-  grid-template-columns: repeat(4, minmax(174px, 1fr));
+  grid-template-columns: repeat(3, minmax(174px, 1fr));
   gap: 20px;
   margin-bottom: 100px;
+  
 }
 
 
 @media screen and (max-width: 900px) {
   .productsList {
-    grid-template-columns: repeat(3, minmax(174px, 1fr));
+    grid-template-columns: repeat(2, minmax(174px, 1fr));
+    
   }
 }
 
 @media screen and (max-width: 620px) {
   .productsList {
-    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-template-columns: repeat(1, minmax(150px, 1fr));
     gap: 8px;
+    /* justify-content: center; */
+    align-content: center;
   }
 }
 
