--- a/src/pages/Product/components/Products/styles.module.css
+++ b/src/pages/Product/components/Products/styles.module.css
@@ -32,6 +32,7 @@
 .productCard_box {
     border: 1px solid #EEE;
     border-radius: 8px;
+    height: 420px;
 }
 @media screen and (max-width: 1150px) {
     .productsContainer {
