--- a/src/pages/ProductInfo/CompanyContact/RequestPopUp/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/RequestPopUp/styles.module.css
@@ -76,6 +76,8 @@
     }
     .requestContainer {
         width: 360px;
+        height: 680px;
+        border-radius: 4px;
     }
     .requestBg {
         width: 360px;
